--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,12 @@
     border: 1px solid #000000;
 }
 .button-menu-section{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 0.03em;
     background-color: #F5F4FA;
     color: #212121;
     border: 1px solid #F5F4FA;
