--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,18 @@
 :root{
- --primary-text-color: color: #212121;
- --title-text-color: color: #757575;
- --accent-color: color: #2196F3;
- --button-color: color: #F5F4FA;
+ --primary-text-color:  #212121;
+ --title-text-color:  #757575;
+ --accent-color:  #2196F3;
+ --button-color:  #F5F4FA;
 }
 body{
     font-family: 'Roboto', sans-serif;
     color: #000000;
     background-color: #fff;
     font-size: 14px;
-    letter-spacing: 0,01;
+    letter-spacing: 0.03em;
 }
 
-.adress{
+address{
     font-style: normal;
 }
 .list{
@@ -21,34 +21,46 @@ body{
 .link{
     text-decoration: none;
 }
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 /* --------------------------Button--------------------------------- */
 .site-nav .header-link{
-    color: #212121;
+    color: var(--primary-text-color);
 }
 .site-nav .header-link:hover,
 .site-nav .header-link:focus{
-    color: #2196F3;
+    color: var(--accent-color);
 }
 .site-nav .header-link.current{
-    color: #2196f3;
+    color: var(--accent-color);
 }
 
 .header-number-link{
     font-weight: 500;
     font-size: 14px;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.02em;    
-    color: #757575;
+    color: var(--title-text-color);
 }
 .header-number-link:hover,
 .header-number-link:focus{
-    color: #2196F3;
+    color: var(--accent-color);
 }
 .services-button{
     font-family: 'Roboto', sans-serif;
-    background-color: #2196F3;
+    background-color: var(--accent-color);
     color: #fff;
-    border: 1px solid #2196F3;
+    border: 1px solid var(--accent-color);
 }
 .services-button:hover,
 .services-button:focus{
@@ -59,21 +71,21 @@ body{
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1,62;
+    line-height: 1.62;
     letter-spacing: 0.03em;
-    background-color: #F5F4FA;
-    color: #212121;
-    border: 1px solid #F5F4FA;
+    background-color: var(--button-color);
+    color: var(--primary-text-color);
+    border: 1px solid var(--button-color);
 }
 .button-menu-section:focus{
-    background-color: #F5F4FA;
-    color: #212121;
+    background-color: var(--button-color);
+    color: var(--primary-text-color);
     border: 1px solid #000000;
 }
 .button-menu-section:hover{
-    background-color: #2196F3;
+    background-color: var(--accent-color);
     color: #fff;
-    border: 1px solid #2196f3;
+    border: 1px solid var(--accent-color);
 
 }
 /* ------------------------------------------------------index main------------------------------------------------- */
@@ -82,25 +94,34 @@ body{
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1,19;
+    line-height: 1.19;
     letter-spacing: 0.03em;
-    color: #2196F3;
+    color: var(--accent-color);
 }
 .studio{
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1,19;
+    line-height: 1.19;
     letter-spacing: 0.03em;
     color: #000000;
 }
-
+.studio-footer{
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1,
+    19;
+    letter-spacing: 0.03em;
+    color: #fff;
+}
 .site-nav {
 
     font-weight: 500;
     font-size: 14px;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
 }
 .hero{
@@ -110,7 +131,7 @@ body{
 .decision{
     font-weight: 900;
     font-size: 44px;
-    line-height: 1,36;
+    line-height: 1.36;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #fff;
@@ -119,7 +140,7 @@ body{
 
     font-weight: 700;
     font-size: 16px;
-    line-height: 1,87;
+    line-height: 1.87;
     display: flex;
     letter-spacing: 0.06em;
     color: #FFFFFF;  
@@ -127,87 +148,79 @@ body{
 .h3-Benefits {
     font-weight: 700;
     font-size: 14px;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
 .p-Benefits{
     font-size: 14px;
-    line-height: 1,71;
+    line-height: 1.71;
     letter-spacing: 0.03em;
-     color: #757575;
+     color: var(--title-text-color);
 }
 .work{
     font-size: 36px;
-    line-height: 1,16;
+    line-height: 1.16;
     letter-spacing: 0.03em;
-    color: #212121;
+    color: var(--primary-text-color);
 }
 .team{
     font-weight: 700;
     font-size: 36px;
-    line-height: 1,16;
+    line-height: 1.16;
     letter-spacing: 0.03em;
-    color: #212121;
+    color: var(--primary-text-color);
 }
 .name-team{
     font-weight: 500;
     font-size: 16px;
-    line-height: 1,18;
+    line-height: 1.18;
     letter-spacing: 0.03em;   
-    color: #212121;
+    color: var(--primary-text-color);
 }
 .position{
     font-size: 16px;
-    line-height: 1,18;
+    line-height: 1.18;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--title-text-color);
 }
 .maps{
     font-weight: 400;
     font-size: 14px;
-    line-height: 1,71;
+    line-height: 1.71;
     letter-spacing: 0.03em;
     color: #FFFFFF;
 }
 .maps:hover,
 .maps:focus{
-    color: #2196F3;
+    color: var(--accent-color);
 }
 .footer-number-link {
     font-weight: 400;
     font-size: 14px;
-    line-height: 1,71;
+    line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
 .footer-number-link:hover,
 .footer-number-link:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 .job{
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;   
-    color: #212121;
+    color: var(--primary-text-color);
 }  
  .sites{
     font-size: 16px;
-    line-height: 1,87;
+    line-height: 1.87;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--title-text-color);
  }
- .visually-hidden{
-     position: absolute;
-     width: 1px;
-     height: 1px;
-     margin: -1px;
-     border: 0;
-     padding: 0;
-     white-space: nowrap;
-     clip-path: inset(100%);
-     clip: rect(0 0 0 0);
-     overflow: hidden;
+ .footer{
+     background-color: #2F303A;
  }
+
         
